--- a/app/views/games/new.html.erb
+++ b/app/views/games/new.html.erb
@@ -1,2 +1,14 @@
-<h1>Games#new</h1>
-<p>Find me in app/views/games/new.html.erb</p>
+<h1>New Game</h1>
+<p>Your letters:</p>
+<ul>
+  <% @letters.each do |letter| %>
+    <li><%= letter %></li>
+  <% end %>
+</ul>
+
+<form action="/score" method="post" data-turbo="false">
+  <%= hidden_field_tag :authenticity_token, form_authenticity_token %>
+  <%= hidden_field_tag :letters, @letters.join(" ") %>
+  <input type="text" name="word">
+  <button type="submit">Play</button>
+</form>
